# football_data_analysis

./: README.md  pyproject.toml
export/: sofascore_paysandu-santos.csv
files/: sofascore_test.py  test_2.py
