[tool.poetry]
name = "football01"
version = "0.1.0"
description = ""
authors = ["Heitor Assumpcao YSA <heitorassumpcao@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mplsoccer = "^1.2.4"
highlight-text = "^0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
